@@ -5,6 +5,9 @@ Changelog
 2.3 (unreleased)
 ------------------
 
+- Extended tooltip: added special handling for mails.
+  [phgross]
+
 - Removed external_edit colum in document listings,
   it's now replaced by the extended tooltip.
   [phgross]
